# basic-document-classifier

./: LICENSE  README.md  pyproject.toml
document_classifier/: __init__.py  cnn.py  server.py
document_classifier/image_classification/: cnn.py
tests/: test_document_classifier.py
